--- a/.github/workflows/river_pr_merge_notify.yml
+++ b/.github/workflows/river_pr_merge_notify.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: 1.93.0
 
       - name: Install riverctl
         run: cargo install riverctl
