--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,7 +187,7 @@ jobs:
         # Run all tests in parallel using all 16 cores
         # Operations tests use dynamic port allocation with unique IPs (127.x.y.1) and are fully thread-safe
         # Simulation tests excluded via feature flag (run separately below due to global state)
-        run: cargo test --workspace --no-default-features --features trace,websocket,redb,wasmer-backend
+        run: cargo test --workspace --no-default-features --features trace,websocket,redb,wasmtime-backend
 
       - name: Test simulation (serial)
         env:
@@ -197,18 +197,18 @@ jobs:
         # and must run serially to avoid race conditions.
         # Includes: basic simulation, subscription topology validation
         run: |
-          cargo test -p freenet --no-default-features --features trace,websocket,redb,wasmer-backend,simulation_tests,testing \
+          cargo test -p freenet --no-default-features --features trace,websocket,redb,wasmtime-backend,simulation_tests,testing \
             --test simulation_integration \
             --test simulation_smoke \
             -- --test-threads=1
 
-      - name: Test wasmtime backend
+      - name: Test wasmer backend
         env:
           CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER: clang
           CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUSTFLAGS: -C link-arg=-fuse-ld=mold
-        # Test the wasmtime backend to prevent regressions
-        # Runs wasmtime unit tests and basic integration tests
-        run: cargo test -p freenet --no-default-features --features trace,websocket,redb,wasmtime-backend --lib
+        # Test the wasmer backend to prevent regressions
+        # Runs wasmer unit tests and basic integration tests
+        run: cargo test -p freenet --no-default-features --features trace,websocket,redb,wasmer-backend --lib
 
   six_peer_regression:
     name: six-peer-regression
