--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -169,7 +169,7 @@ required-features = ["bench", "bench_full"]
 chrono = { workspace = true }
 
 [features]
-default = ["redb", "trace", "websocket", "wasmer-backend"]
+default = ["redb", "trace", "websocket", "wasmtime-backend"]
 sqlite = ["sqlx"]
 trace = ["tracing-subscriber", "tracing-appender"]
 trace-ot = ["opentelemetry-jaeger", "trace", "tracing-opentelemetry", "opentelemetry-otlp"]
